# docs/swagger/swagger.yaml
@@ -6,19 +6,63 @@ components:
   responses: {}
   schemas:
     {
-      HealthResponse:
+      HealthResponse: { properties: { status: { type: string } }, required: [status], type: object },
+      List:
         {
-          properties: { status: { type: string } },
-          required: [status],
+          properties:
+            { userId: { type: string }, primary: { type: boolean }, title: { type: string }, id: { type: string } },
+          required: [userId, primary, title, id],
+          type: object,
+          description: 'Model List',
+        },
+      ListRequest:
+        { properties: { userId: { type: string }, title: { type: string } }, required: [userId, title], type: object },
+      Task:
+        {
+          properties:
+            {
+              listId: { type: string },
+              completed: { type: boolean },
+              description: { type: string },
+              title: { type: string },
+              id: { type: string },
+            },
+          required: [listId, completed, description, title, id],
+          type: object,
+          description: 'Model Task',
+        },
+      TaskRequest:
+        {
+          properties:
+            {
+              completed: { type: boolean },
+              description: { type: string },
+              title: { type: string },
+              listId: { type: string },
+            },
+          required: [title, listId],
+          type: object,
+        },
+      User:
+        {
+          properties: { password: { type: string }, username: { type: string }, id: { type: string } },
+          required: [password, username, id],
+          type: object,
+          description: 'Model User',
+        },
+      UserRequest:
+        {
+          properties: { password: { type: string }, username: { type: string } },
+          required: [password, username],
           type: object,
         },
     }
   securitySchemes: {}
 info:
-  title: '@express/apis'
+  title: '@express/api'
   version: 0.0.1
-  description: 'Express Template - APIs'
-  license: { name: MIT }
+  description: 'express.js - apis'
+  license: { name: 'GNU GPL 3.0' }
   contact: { name: 'hieudoanm ', email: hieumdoan@gmail.com }
 openapi: 3.0.0
 paths:
@@ -32,18 +76,276 @@ paths:
               '200':
                 {
                   description: Ok,
+                  content: { application/json: { schema: { $ref: '#/components/schemas/HealthResponse' } } },
+                },
+            },
+          tags: [Health],
+          security: [],
+          parameters: [],
+        },
+    }
+  /lists:
+    {
+      get:
+        {
+          operationId: GetLists,
+          responses:
+            {
+              '200':
+                {
+                  description: Ok,
+                  content:
+                    { application/json: { schema: { items: { $ref: '#/components/schemas/List' }, type: array } } },
+                },
+            },
+          tags: [Lists],
+          security: [],
+          parameters: [],
+        },
+      post:
+        {
+          operationId: CreateList,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/List' } } } },
+            },
+          tags: [Lists],
+          security: [],
+          parameters: [],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/ListRequest' } } } },
+        },
+    }
+  '/lists/{id}':
+    {
+      get:
+        {
+          operationId: GetList,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/List' } } } },
+            },
+          tags: [Lists],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+        },
+      patch:
+        {
+          operationId: UpdateList,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/List' } } } },
+            },
+          tags: [Lists],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/ListRequest' } } } },
+        },
+      delete:
+        {
+          operationId: DeleteList,
+          responses:
+            {
+              '200':
+                {
+                  description: Ok,
                   content:
                     {
                       application/json:
-                        {
-                          schema:
-                            { $ref: '#/components/schemas/HealthResponse' },
-                        },
+                        { schema: { properties: { deleted: { type: boolean } }, required: [deleted], type: object } },
                     },
                 },
             },
+          tags: [Lists],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+        },
+    }
+  /tasks:
+    {
+      get:
+        {
+          operationId: GetTasks,
+          responses:
+            {
+              '200':
+                {
+                  description: Ok,
+                  content:
+                    { application/json: { schema: { items: { $ref: '#/components/schemas/Task' }, type: array } } },
+                },
+            },
+          tags: [Tasks],
           security: [],
           parameters: [],
+        },
+      post:
+        {
+          operationId: CreateTask,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/Task' } } } },
+            },
+          tags: [Tasks],
+          security: [],
+          parameters: [],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/TaskRequest' } } } },
+        },
+    }
+  '/tasks/{id}':
+    {
+      get:
+        {
+          operationId: GetTask,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/Task' } } } },
+            },
+          tags: [Tasks],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+        },
+      patch:
+        {
+          operationId: UpdateTask,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/Task' } } } },
+            },
+          tags: [Tasks],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/TaskRequest' } } } },
+        },
+      delete:
+        {
+          operationId: DeleteTask,
+          responses:
+            {
+              '200':
+                {
+                  description: Ok,
+                  content:
+                    {
+                      application/json:
+                        { schema: { properties: { deleted: { type: boolean } }, required: [deleted], type: object } },
+                    },
+                },
+            },
+          tags: [Tasks],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+        },
+    }
+  /users/sign-up:
+    {
+      post:
+        {
+          operationId: SignUp,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/User' } } } },
+            },
+          tags: [Users],
+          security: [],
+          parameters: [],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/UserRequest' } } } },
+        },
+    }
+  /users/sign-in:
+    {
+      post:
+        {
+          operationId: SignIn,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/User' } } } },
+            },
+          tags: [Users],
+          security: [],
+          parameters: [],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/UserRequest' } } } },
+        },
+    }
+  '/users/{id}':
+    {
+      get:
+        {
+          operationId: GetUser,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/User' } } } },
+            },
+          tags: [Users],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+        },
+      delete:
+        {
+          operationId: DeleteUser,
+          responses:
+            {
+              '200':
+                {
+                  description: Ok,
+                  content:
+                    {
+                      application/json:
+                        { schema: { properties: { deleted: { type: boolean } }, required: [deleted], type: object } },
+                    },
+                },
+            },
+          tags: [Users],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+        },
+    }
+  '/users/{id}/username':
+    {
+      patch:
+        {
+          operationId: UpdateUsername,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/User' } } } },
+            },
+          tags: [Users],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/UserRequest' } } } },
+        },
+    }
+  '/users/{id}/password':
+    {
+      patch:
+        {
+          operationId: UpdatePassword,
+          responses:
+            {
+              '200':
+                { description: Ok, content: { application/json: { schema: { $ref: '#/components/schemas/User' } } } },
+            },
+          tags: [Users],
+          security: [],
+          parameters: [{ in: path, name: id, required: true, schema: { type: string } }],
+          requestBody:
+            { required: true, content: { application/json: { schema: { $ref: '#/components/schemas/UserRequest' } } } },
         },
     }
 servers:
